--- a/style.css
+++ b/style.css
@@ -777,7 +777,7 @@ body{
 @media screen and (max-width:768px){
 
     .latest_update_main_box{
-     width: 100%;
+    
     min-height: 50px;
     margin-top: 80px;
     background-color: aliceblue;
@@ -787,12 +787,20 @@ body{
     .latest_update_content_box{
 
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     
      
   
 }
+.update_h2{
+    font-size: 20px;
+    color: blue;
+    font-weight: bold;
+}
+
+
 
 .latest_img{
     height: 235px;
@@ -903,14 +911,16 @@ footer{
     justify-content: center;
     align-items: center;
     gap: 10px;
+    background-color: #562bf3;
+    
    
-    padding: 1rem 18rem; 
+    /* padding: 1rem 18rem;  */
    
 }
 
 .footr_sec > li{
     color: #746d6d;
-    font-size: 8px;
+    font-size: 7px;
 }
 
 
@@ -926,13 +936,50 @@ footer{
 
 .instagrams_logo{
     display: flex;
-    gap: 10px;
+    gap: 5px;
     margin-top: 10px;
 }
 .ftrr_img{
     height: 20px;
     
 }
+.footr_sec{
+    list-style-type: none;
+    color: black;
+    font-size: 11px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+ 
+    
+
+
+}
+
+.footer{
+    margin-top: 60px;
+    /* width:100%; */
+    max-height:80px
+}
+
+.footer_text{
+    display: flex;
+    gap: 4px;
+  
+}
+
+
+
+footer{
+    margin-top: 30px;
+    /* width: 100%; */
+    height: 30px;
+    background-color: #b93e3e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
     
 }
